# servicenow-mcp

./: .cursorrules  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  debug_workflow_api.py  pyproject.toml
docs/: catalog.md  catalog_optimization_plan.md  catalog_variables.md  change_management.md  changeset_management.md  incident_management.md  knowledge_base.md  task_management.md  user_management.md  workflow_management.md
examples/: basic_server.py  catalog_integration_test.py  catalog_optimization_example.py  change_management_demo.py  changeset_management_demo.py  claude_catalog_demo.py  claude_desktop_config.json  claude_incident_demo.py  claude_servicenow_demo.py  debug_workflow_api.py  test_incidents.py  wake_servicenow_instance.py  workflow_management_demo.py
prompts/: add_servicenow_mcp_tool.md
scripts/: check_pdi_info.py  check_pdi_status.py  install_claude_desktop.sh  setup.sh  setup_api_key.py  setup_auth.py  setup_oauth.py  test_connection.py
src/servicenow_mcp/: __init__.py  cli.py  server.py  server_sse.py
src/servicenow_mcp/auth/: __init__.py  auth_manager.py
src/servicenow_mcp/resources/: __init__.py  catalog.py  changesets.py  incidents.py  script_includes.py  tasks.py
src/servicenow_mcp/tools/: __init__.py  business_rule_tools.py  catalog_optimization.py  catalog_tools.py  catalog_variables.py  change_tools.py  changeset_tools.py  client_script_tools.py  incident_tools.py  knowledge_base.py  script_include_tools.py  task_tools.py  user_tools.py  workflow_tools.py
src/servicenow_mcp/utils/: __init__.py  config.py
tests/: test_catalog_optimization.py  test_catalog_resources.py  test_catalog_tools.py  test_catalog_variables.py  test_change_tools.py  test_changeset_resources.py  test_changeset_tools.py  test_config.py  test_knowledge_base.py  test_script_include_resources.py  test_script_include_tools.py  test_server_catalog.py  test_server_catalog_optimization.py  test_server_workflow.py  test_user_tools.py  test_workflow_tools.py  test_workflow_tools_direct.py  test_workflow_tools_params.py
